# video_thumbnailer

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE_MIT_CODE  README.md  inny_project.rs  justfile
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
gui/: Cargo.toml
gui/src/: config.rs  main.rs  settings.rs  state.rs  util.rs
gui/src/wire/: files.rs  misc.rs  mod.rs  processing.rs
gui/ui/: app.slint  globals.slint  main_window.slint
gui/ui/panels/: files_panel.slint  mode_panel.slint  options_panel.slint  output_panel.slint  overlay_panel.slint  progress_panel.slint
