[package]
name = "thumbnailer-core"
version = "1.0.0"
authors = ["Rafał Mikrut <mikrutrafal@protonmail.com>"]
edition = "2024"
description = "Core library for video thumbnailer"
license = "MIT"
homepage = "https://github.com/qarmin/video_thumbnailer"
repository = "https://github.com/qarmin/video_thumbnailer"

[dependencies]
image     = { version = "0.25", features = ["webp"] }
ab_glyph  = "0.2"
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
rayon     = "1"
